[metadata]
name = heat-contrib-rackspace
summary = Heat resources for working with the Rackspace Cloud
description-file =
    README.md
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/heat/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    rackspace

# Copy to /usr/lib/heat for non-stevedore plugin loading
data_files =
    lib/heat/rackspace = rackspace/resources/*
    lib/heat/heat_keystoneclient_v2 = heat_keystoneclient_v2/*

[entry_points]

heat.clients =
    auto_scale = rackspace.clients:RackspaceAutoScaleClient
    cinder = rackspace.clients:RackspaceCinderClient
    cloud_dns = rackspace.clients:RackspaceCloudDNSClient
    cloud_lb = rackspace.clients:RackspaceCloudLBClient
    cloud_networks = rackspace.clients:RackspaceCloudNetworksClient
    glance = rackspace.clients:RackspaceGlanceClient
    nova = rackspace.clients:RackspaceNovaClient
    trove = rackspace.clients:RackspaceTroveClient
    swift = rackspace.clients:RackspaceSwiftClient

[global]
setup-hooks =
    pbr.hooks.setup_hook
